# stelpar

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  dsa_tutorial_radius.ipynb  pyproject.toml  setup.py  test.py  utils.py
docs/: requirements.txt
docs/guide/: estimate.rst  install.rst
docs/source/: conf.py  index.rst
docs/source/_templates/: layout.html
docs/source/guide/: estimate.rst  install.rst  photometry.rst  plot.rst  target.rst
docs/source/tutorials/: mcmc_options.ipynb  plot_examples.ipynb  target_priors_photometry.ipynb
dsa/: __init__.py  config.py
dsa/radius/: __init__.py  estimate.py  photometry.py  plot.py  simulation.py  target.py
radius/: metadata.py  output.py  photometry.py  simulation.py
resources/: apj425122t3_mrt.txt
rstar/: __init__.py  config.py  estimate.py  metadata.py  photometry.py  plot.py  simulation.py  target.py  testing.py  utils.py
src/stelpar/: __init__.py  config.py  estimate.py  metadata.py  output.py  photometry.py  plot.py  simulation.py  target.py  utils.py
src/stelpar/tests/: conftest.py  test_photometry.py
tutorials/: mcmc_options.ipynb  quickstart.ipynb  rstar_tutorial.ipynb  target_priors_photometry.ipynb
