[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stelpar"
version = "0.1.0"
authors = [
    {name = "Matthew J. Fields", email = "mjfields@live.unc.edu"},
]
description = "Stellar parameter estimation and analysis tool"
requires-python = ">=3.6"
keywords = ["astronomy", "astrophysics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", 
    "numba",
    "pandas",
    "emcee>=3.0.0",
    "astroquery",
    "synphot",
    "dust_extinction",
    "isochrones",
    "tqdm",
    "matplotlib",
    "corner",
    "seaborn"
]
dynamic = ["readme"]

[project.optional-dependencies]
exe = ["setuptools"]
test = ["pytest", "pytest-cov"]
notebook = ["jupyter", "h5py"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["stelpar"]

[tool.setuptools.package-data]
stelpar = ["*.py", "datafiles/*", "datafiles/Filter_Profiles/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]